--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gulp": "~3.5.5",
     "gulp-browserify": "~0.5.0",
     "gulp-sass": "~0.7.1",
-    "markdown": "~0.5.0"
+    "markdown": "~0.5.0",
+    "request": "^2.34.0",
+    "cheerio": "^0.13.1"
   }
 }
