--- a/package.json
+++ b/package.json
@@ -12,16 +12,14 @@
     "bLazy": "dinbror/blazy"
   },
   "dependencies": {
-    "express": "3.5.0",
+    "express": "~3.5.0",
     "jade": "*",
     "mongoose": "~3.8.8",
     "mongodb": "~1.3.23",
-    "request": "^2.34.0",
     "cheerio": "^0.13.1",
     "lodash-node": "^2.4.1",
     "q": "^1.0.1",
-    "request-promise": "0.0.3",
-    "hyperquest": "^0.3.0"
+    "q-io": "^1.11.0"
   },
   "devDependencies": {
     "watchify": "^0.6.3",
