--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
   "scripts": {
     "install": "napa"
   },
-  "napa": {
-    "angular": "angular/bower-angular",
-    "ui-router": "angular-ui/ui-router"
-  },
   "dependencies": {
     "express": "~3.5.0",
     "jade": "*",
@@ -20,7 +16,8 @@
     "q": "^1.0.1",
     "q-io": "^1.11.0",
     "autoprefixer-stylus": "0.0.4",
-    "normalize.css": "^3.0.1"
+    "normalize.css": "^3.0.1",
+    "angular-ui-router": "^0.2.10"
   },
   "devDependencies": {
     "watchify": "^0.6.3",
@@ -29,7 +26,13 @@
     "gulp": "~3.5.5",
     "markdown": "~0.5.0",
     "vinyl-source-stream": "^0.1.1",
-    "browserify-shim": "^3.3.2"
+    "browserify-shim": "^3.3.2",
+    "debowerify": "^0.7.0"
+  },
+  "napa": {
+    "angular": "angular/bower-angular",
+    "angular-touch": "angular/bower-angular-touch",
+    "ng-slider": "Venturocket/angular-slider"
   },
   "browserify": {
     "transform": [
@@ -42,15 +45,8 @@
     "debug": true
   },
   "browser": {
-    "angular": "angular/angular.js",
-    "angular-route": "angular-route/angular-route.js"
+    "angular": "angular/angular",
+    "ngSlider": "ng-slider/build/angular-slider"
   },
-  "browserify-shim": {
-    "angular-route/angular-route.js": {
-      "exports": "angular-route",
-      "depends": [
-        "angular"
-      ]
-    }
-  }
+  "browserify-shim": {}
 }
