--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,6 @@
   ],
   "dependencies": {
     "angular": "~1.3.0",
-    "angular-touch": "~1.3.0",
-    "venturocket-angular-slider": "~0.3.2",
-    "angularjs-slider": "~0.1.2"
+    "angular-touch": "~1.3.0"
   }
 }
