--- a/package.json
+++ b/package.json
@@ -7,29 +7,29 @@
     "install": "bower install"
   },
   "dependencies": {
-    "express": "~3.5.0",
+    "express": "~3.5.2",
     "jade": "*",
     "mongoose": "~3.8.8",
-    "mongodb": "~1.3.23",
-    "cheerio": "^0.13.1",
+    "mongodb": "~1.4.2",
+    "cheerio": "^0.15.x",
     "lodash-node": "^2.4.1",
     "q": "^1.0.1",
     "q-io": "^1.11.0",
-    "autoprefixer-stylus": "0.0.4",
+    "autoprefixer-stylus": "0.1.0",
     "normalize.css": "^3.0.1",
     "angular-ui-router": "^0.2.10",
     "mongoose-timestamp": "^0.2.1"
   },
   "devDependencies": {
-    "watchify": "^0.6.3",
-    "napa": "~0.4.0",
+    "watchify": "^0.8.2",
+    "napa": "~0.4.1",
     "jadeify": "~2.1.1",
-    "gulp": "~3.5.5",
+    "gulp": "~3.6.2",
     "markdown": "~0.5.0",
     "vinyl-source-stream": "^0.1.1",
-    "browserify-shim": "^3.3.2",
+    "browserify-shim": "^3.4.1",
     "debowerify": "^0.7.0",
-    "browser-sync": "^0.8.0"
+    "browser-sync": "^0.8.2"
   },
   "browserify": {
     "transform": [
